; ModuleID = '/home/carl/AnghaBench/linux/drivers/vme/bridges/extr_vme_tsi148.c_tsi148_PERR_irqhandler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vme/bridges/extr_vme_tsi148.c_tsi148_PERR_irqhandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vme_bridge = type { i32, %struct.tsi148_driver* }
%struct.tsi148_driver = type { i64 }

@.str = private unnamed_addr constant [57 x i8] c"PCI Exception at address: 0x%08x:%08x, attributes: %08x\0A\00", align 1
@TSI148_LCSR_EDPAU = common dso_local global i64 0, align 8
@TSI148_LCSR_EDPAL = common dso_local global i64 0, align 8
@TSI148_LCSR_EDPAT = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [61 x i8] c"PCI-X attribute reg: %08x, PCI-X split completion reg: %08x\0A\00", align 1
@TSI148_LCSR_EDPXA = common dso_local global i64 0, align 8
@TSI148_LCSR_EDPXS = common dso_local global i64 0, align 8
@TSI148_LCSR_EDPAT_EDPCL = common dso_local global i32 0, align 4
@TSI148_LCSR_INTC_PERRC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vme_bridge*)* @tsi148_PERR_irqhandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tsi148_PERR_irqhandler(%struct.vme_bridge* %0) #0 {
  %2 = alloca %struct.vme_bridge*, align 8
  %3 = alloca %struct.tsi148_driver*, align 8
  store %struct.vme_bridge* %0, %struct.vme_bridge** %2, align 8
  %4 = load %struct.vme_bridge*, %struct.vme_bridge** %2, align 8
  %5 = getelementptr inbounds %struct.vme_bridge, %struct.vme_bridge* %4, i32 0, i32 1
  %6 = load %struct.tsi148_driver*, %struct.tsi148_driver** %5, align 8
  store %struct.tsi148_driver* %6, %struct.tsi148_driver** %3, align 8
  %7 = load %struct.vme_bridge*, %struct.vme_bridge** %2, align 8
  %8 = getelementptr inbounds %struct.vme_bridge, %struct.vme_bridge* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.tsi148_driver*, %struct.tsi148_driver** %3, align 8
  %11 = getelementptr inbounds %struct.tsi148_driver, %struct.tsi148_driver* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @TSI148_LCSR_EDPAU, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i32 @ioread32be(i64 %14)
  %16 = load %struct.tsi148_driver*, %struct.tsi148_driver** %3, align 8
  %17 = getelementptr inbounds %struct.tsi148_driver, %struct.tsi148_driver* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @TSI148_LCSR_EDPAL, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 @ioread32be(i64 %20)
  %22 = load %struct.tsi148_driver*, %struct.tsi148_driver** %3, align 8
  %23 = getelementptr inbounds %struct.tsi148_driver, %struct.tsi148_driver* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @TSI148_LCSR_EDPAT, align 8
  %26 = add nsw i64 %24, %25
  %27 = call i32 @ioread32be(i64 %26)
  %28 = call i32 (i32, i8*, i32, i32, ...) @dev_err(i32 %9, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %21, i32 %27)
  %29 = load %struct.vme_bridge*, %struct.vme_bridge** %2, align 8
  %30 = getelementptr inbounds %struct.vme_bridge, %struct.vme_bridge* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.tsi148_driver*, %struct.tsi148_driver** %3, align 8
  %33 = getelementptr inbounds %struct.tsi148_driver, %struct.tsi148_driver* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @TSI148_LCSR_EDPXA, align 8
  %36 = add nsw i64 %34, %35
  %37 = call i32 @ioread32be(i64 %36)
  %38 = load %struct.tsi148_driver*, %struct.tsi148_driver** %3, align 8
  %39 = getelementptr inbounds %struct.tsi148_driver, %struct.tsi148_driver* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @TSI148_LCSR_EDPXS, align 8
  %42 = add nsw i64 %40, %41
  %43 = call i32 @ioread32be(i64 %42)
  %44 = call i32 (i32, i8*, i32, i32, ...) @dev_err(i32 %31, i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.1, i64 0, i64 0), i32 %37, i32 %43)
  %45 = load i32, i32* @TSI148_LCSR_EDPAT_EDPCL, align 4
  %46 = load %struct.tsi148_driver*, %struct.tsi148_driver** %3, align 8
  %47 = getelementptr inbounds %struct.tsi148_driver, %struct.tsi148_driver* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* @TSI148_LCSR_EDPAT, align 8
  %50 = add nsw i64 %48, %49
  %51 = call i32 @iowrite32be(i32 %45, i64 %50)
  %52 = load i32, i32* @TSI148_LCSR_INTC_PERRC, align 4
  ret i32 %52
}

declare dso_local i32 @dev_err(i32, i8*, i32, i32, ...) #1

declare dso_local i32 @ioread32be(i64) #1

declare dso_local i32 @iowrite32be(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
